<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_24dp"
        app:cardCornerRadius="@dimen/space_32dp"
        app:cardElevation="@dimen/space_24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/card_border"
            android:orientation="vertical"
            android:padding="@dimen/space_24dp"
            android:elevation="@dimen/space_24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#73326E"
                android:textSize="@dimen/font_size_36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/card_border"
                android:drawableStart="@drawable/account_avatar"
                android:drawablePadding="@dimen/space_8dp"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/enter_user_name"
                android:padding="@dimen/space_8dp"
                android:textColor="#171F26"
                android:textColorHint="#171F26" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_border"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/space_8dp"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/enter_user_mail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/space_8dp"
                android:textColor="#171F26"
                android:textColorHint="#171F26" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_border"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="@dimen/space_8dp"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/space_8dp"
                android:textColor="#171F26"
                android:textColorHint="#171F26" />

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_border"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="@dimen/space_8dp"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/validate_password"
                android:inputType="textPassword"
                android:padding="@dimen/space_8dp"
                android:textColor="#171F26"
                android:textColorHint="#171F26" />

            <Button
                android:id="@+id/signup_button"
                style="@style/ButtonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_64dp"
                android:layout_marginTop="@dimen/space_32dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/login_redirect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_12dp"
                android:fontFamily="@font/rubik_medium"
                android:padding="@dimen/space_8dp"
                android:text="Zaten üye misiniz? Giriş yap"
                android:textColor="#73326E"
                android:textSize="@dimen/font_size_18sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>